# OpenGL-basic

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main
inc/: ElementBuffer.h  Texture.h  VertexArray.h  VertexBufferArray.h  camera.h  fileloader.h  shader.h
inc/glfw/: CMakeLists.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake
inc/glfw/examples/: Makefile  boing  cmake_install.cmake  gears  heightmap  offscreen  particles  sharing  simple  splitview  wave
inc/glfw/src/: Makefile  cmake_install.cmake
inc/glfw/tests/: Makefile  clipboard  cmake_install.cmake  cursor  empty  events  gamma  glfwinfo  icon  iconify  inputlag  joysticks  monitors  msaa  opacity  reopen  tearing  threads  timeout  title  triangle-vulkan  windows
input/: color.txt  fractal.py  gen_sphere.py  index.txt  mandelbrot_indices.txt  matrix.txt
shader/: fragment  vertex
src/: ElementBuffer.cpp  Texture.cpp  VertexArray.cpp  VertexBufferArray.cpp  camera.cpp  fileloader.cpp  main.cpp  shader.cpp
